fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ form {
   border: none;
   border-bottom: 1px solid var(--foreground-faded);
   text-align: center;
+  width: 100%;
 }
 .item-input:focus {
   border-bottom: 1px solid var(--foreground);
@@ -122,8 +123,17 @@ form {
   font-size: 2rem;
   text-align: center;
 
-  position: absolute;
+  position: fixed;
   bottom: 1rem;
   left: 0.5rem;
   filter: grayscale(1);
+}
+
+.by {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+}
+.by a {
+  color: var(--foreground)
 }
